# frameworkd

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.txt
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  StaticAnalyzers.cmake
examples/: PING.json  PONG.json  configModel.json  ping.cpp  ping.json  pong.cpp  pong.json  zfkd.dbus.ping.conf  zfkd.dbus.pong.conf
include/frameworkd/classes/daemon/: daemon.hpp
include/frameworkd/classes/dbus-handler/: dbus-handler.hpp
include/frameworkd/classes/iservice/: iservice.hpp
include/frameworkd/classes/routine-service-proxy/: routine-service-proxy.hpp
include/frameworkd/classes/service-handler/: service-handler.hpp
include/frameworkd/classes/service-proxy/: service-proxy.hpp
include/frameworkd/classes/static-service-proxy/: static-service-proxy.hpp
src/classes/config-handler/: config-handler.cpp
src/classes/daemon/: daemon.cpp  daemon.hpp
src/classes/dbus-controller/: dbus-controller.cpp  dbus-controller.hpp
src/classes/dbus-handler/: dbus-handler.cpp  dbus-handler.hpp
src/classes/iservice/: iservice.hpp
src/classes/locked-storage/: locked-storage.cpp
src/classes/routine/: routine.cpp  routine.hpp
src/classes/routine-handler/: routine-handler.cpp  routine-handler.hpp
src/classes/routine-service-proxy/: routine-service-proxy.cpp  routine-service-proxy.hpp
src/classes/service/: service.cpp  service.hpp
src/classes/service-handler/: service-handler.cpp  service-handler.hpp
src/classes/service-proxy/: service-proxy.cpp  service-proxy.hpp
src/classes/socket-handler/: sockets.cpp  sockets.hpp
src/classes/static-service-proxy/: static-service-proxy.cpp  static-service-proxy.hpp
src/utilities/DBusNameHandler/: dbus-name-handler.cpp  dbus-name-handler.hpp
src/utilities/config-handler/: config-handler.cpp  config-handler.hpp
src/utilities/locked-storage/: locked-storage.hpp
src/utils/path-handler/: path-handler.cpp  path-handler.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  daemon-test.cpp  locked-storage-tests.cpp  service-handler-tests.cpp  service-tests.cpp
